2007-09-13  David Smith  <dsmith@redhat.com>

	* procfs.c (_stp_procfs_dir_lookup): Added 'const' qualifier to
	'dir' parameter.
	(_stp_create_procfs): Added 'const' qualifier to 'path'
	parameter.  Removed debug prints.
	(_stp_close_procfs): Removed debug prints.

2007-09-12  Martin Hunt  <hunt@redhat.com>

	* map-stat.c (_stp_map_new_hstat_log): Set buckets to 
	HIST_LOG_BUCKETS.
	(_stp_pmap_new_hstat_log): Ditto.
	(_stp_map_new_hstat_linear): Call _stp_stat_calc_buckets().
	(_stp_pmap_new_hstat_linear): Ditto.

	* stat.h (STP_MAX_BUCKETS): Define..
	(HIST_LOG_BUCKETS): Define.

	* stat.c (_stp_stat_init): Call _stp_stat_calc_buckets().

	* stat-common.c (_stp_stat_calc_buckets): New function. Common
	bucket calculation and error reporting code.
	(_stp_bucket_to_val): New function.
	(_stp_val_to_bucket): Renamed and now handles negative numbers.
	(_stp_stat_print_histogram): Handle negative values in log histograms.
	(__stp_stat_add): Cleanup..

	* map-gen.c (_stp_map_new): Remove buckets param for HIST_LOG.
	* pmap-gen.c (_stp_pmap_new): Ditto.
	
2007-09-10  Martin Hunt  <hunt@redhat.com>

	* procfs.c: New file. Common runtime procfs functions.

2007-08-20  Martin Hunt  <hunt@redhat.com>

	* stack.c (_stp_kta): Removed.

2007-08-20  Masami Hiramatsu <mhiramat@redhat.com>

	* stack-x86_64.c: Fix backtrace to use the value of stack register
	instead of its address.

2007-08-17  Martin Hunt  <hunt@redhat.com>

	* bench2/bench.rb: Send HUP to stapio, instead of staprun.

2007-08-10  Josh Stone  <joshua.i.stone@intel.com>

	PR 4593
	* loc2c-runtime.h (deref, store_deref): Set an error message with
	the pointer value and name into last_error, since it's hard to
	determine the details once you've already jumped to deref_fault.

2007-07-09  Martin Hunt  <hunt@redhat.com>

	* sym.h (STP_MAX_MODULES): Raise limit to 256.

2007-07-06  Martin Hunt  <hunt@redhat.com>

	* stat-common.c (__stp_stat_add): Fix calculations
	for linear histogram buckets.
