@@ -1,3 +1,8 @@
+2007-09-14  Martin Hunt  <hunt@redhat.com>
+
+	* procfs.c (_stp_create_procfs): Be sure that directories in the path
+	are really directories and not files.
+
 2007-09-13  David Smith  <dsmith@redhat.com>
 
 	* procfs.c (_stp_procfs_dir_lookup): Added 'const' qualifier to
